--- a/style.css
+++ b/style.css
@@ -5,46 +5,39 @@
   font-family: Arial, sans-serif;
 }
 
+html,
 body {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #f3f4f6;
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  background-color: black;
+  color: white;
+  overflow: hidden;
 }
 
 main {
-  text-align: center;
-}
-
-#box {
-  width: 260px;
-  padding: 20px;
-  background: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  margin-bottom: 15px;
-}
-
-#box h1 {
-  font-size: 20px;
-  margin-bottom: 6px;
-}
-
-#box h2 {
-  font-size: 14px;
-  color: #6b7280;
+  height: 100%;
+  width: 100%;
+  text-wrap: nowrap;
 }
 
 button {
-  padding: 8px 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9;
+  padding: 10px 20px;
+  background-color: rgb(0, 38, 108);
   border: none;
-  border-radius: 6px;
-  background: #000000;
-  color: #ffffff;
+  border-radius: 5px;
   cursor: pointer;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
 }
 
-button:hover {
-  background: #333333;
+button:active {
+  scale: 0.95;
 }
