--- a/style.css
+++ b/style.css
@@ -1,88 +1,74 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
 }
 
 body {
-  min-height: 100vh;
-  background: #7c4747;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    background-color: #000;
+    color: #fff;
 }
 
-.piano-case {
-  background: linear-gradient(to bottom, #4a2c1a, #1e0f08);
-  padding: 30px 20px;
-  border-radius: 12px;
-}
-
-.piano-board {
-  display: flex;
-  position: relative;
+.main {
+    max-width: 420px;
+    margin: auto;
+    padding: 20px 14px;
 }
 
 
-.white {
-  width: 55px;
-  height: 220px;
-  background: linear-gradient(to bottom, #eee, #fff);
-  border: 2px solid #ccc;
-  border-radius: 0 0 6px 6px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  cursor: pointer;
+.elem {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 6px;
 }
 
-.white span {
-  margin-bottom: 10px;
-  color: #333;
-  font-size: 14px;
-}
-
-.white.active {
-  transform: translateY(3px);
-  background: linear-gradient(to bottom, #fff, #ddd);
+.left {
+    display: flex;
+    align-items: center;
+    gap: 12px;
 }
 
 
-.black {
-  width: 35px;
-  height: 140px;
-  background: linear-gradient(to bottom, #444, #000);
-  margin: 0 -18px;
-  z-index: 2;
-  border-radius: 0 0 4px 4px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  cursor: pointer;
-}
-
-.black span {
-  margin-bottom: 8px;
-  color: white;
-  font-size: 12px;
-}
-
-.black.active {
-  transform: translateY(3px);
-  background: linear-gradient(to bottom, #000, #222);
+.left img {
+    height: 46px;
+    width: 46px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 1px solid #222;
 }
 
 
-@media (max-width: 600px) {
-  .white {
-    width: 40px;
-    height: 180px;
-  }
+.left h3 {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.2;
+}
 
-  .black {
-    width: 26px;
-    height: 110px;
-    margin: 0 -13px;
-  }
+.right button,
+.elem>button {
+    background: #4150F7;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 13px;
+    font-weight: 600;
+    cursor: pointer;
+    padding: 6px 10px;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+
+.elem:not(:last-child) {
+    border-bottom: 1px solid #121212;
 }
