--- a/style.css
+++ b/style.css
@@ -118,6 +118,35 @@ body {
   align-items: center;
 }
 
+.right h4{
+  cursor: pointer;
+}
+.right i {
+  font-size: 25px;
+  font-weight: 500;
+
+}
+
+.right h6 {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.right > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  cursor: pointer;
+}
+
+
+.right > div h4, h6{
+  pointer-events: none;
+}
+
+
 .icon {
   font-size: 22px;
   text-align: center;
@@ -127,4 +156,33 @@ body {
   display: block;
   margin-top: 4px;
   font-size: 12px;
+  pointer-events: none;
+}
+
+
+.love{
+  color: red;
+}
+
+
+.mute{
+  background-color: #333;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+}
+.mute i {
+  font-size: 20px;
+  pointer-events: none;
+}
+.mute:active{
+  scale: 0.95;
 }
