--- a/style.css
+++ b/style.css
@@ -1,70 +1,32 @@
-@font-face {
-  font-family: 'main';
-  src: url(./main.ttf);
-}
-
-@font-face {
-  font-family: 'regular1';
-  src: url(./main2.woff2);
-}
-
-
-
-
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
 
 }
 
 html,body{
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
 
 }
 
 body{
-  background-image: url(https://plus.unsplash.com/premium_photo-1674747886323-2b59aa7a8bb1?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDR8fHxlbnwwfHx8fHw%3D);
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h3{
+    color: green;
+    font-size: 50px;
+    font-family: monospace;
+    background-color: rgba(0, 246, 0, 0.119);
 
 }
 
-:root{
-  --x: 200px;
-  --y: 200px;
-}
-
-.main{
-    height: 100%;
-  width: 100%;
-  background: radial-gradient( 150px at var(--x) var(--y) ,transparent, rgb(0, 0, 0));
-}
-
-
-.text{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-}
-
-h2{
-  color: white;
-  font-family: main;
-  font-size: 150px;
-  font-weight: 500;
-  
-}
-
-h4{
-  color: white;
-  font-family: regular1;
-  font-size: 20px;
-  font-weight: 500;
-  
+h3:hover{
+    background-color: rgba(0, 246, 0, 0.119);
 }
